--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
-<video controls style="max-width: 100%; height: auto;">
-  <source src="VID_20250422_110859_199.mp4" type="video/mp4">
-  مرورگر شما از ویدیو پشتیبانی نمی‌کند.
-</video>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <title>کصکش بزرگ باشه</title>
+  <style>
+    body {
+      background-color: #f0f0f0;
+      text-align: center;
+      font-family: sans-serif;
+      padding-top: 50px;
+    }
+    video {
+      width: 80%;
+      max-width: 800px;
+      border: 2px solid #333;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    }
+  </style>
+</head>
+<body>
+  <h1>
+  <video controls autoplay>
+    <source src="VID_20250422_110859_199.mp4" type="video/mp4">
+    مرورگر شما از ویدیو پشتیبانی نمی‌کند.
+  </video>
+</body>
+</html>
